Fixed Posts & Thumbnails

--- a/_posts/2016-08-11-whats-new.md
+++ b/_posts/2016-08-11-whats-new.md
@@ -1,6 +1,7 @@
 ---
 title:  "What's new?"
-date:   2016-08-11
+display-date: Aug 11, 2016
+thumbnail: dreams.png
 categories: [mr.brian]
 tags: [development]
 ---
