--- a/_posts/2016-11-08-etereo.md
+++ b/_posts/2016-11-08-etereo.md
@@ -1,6 +1,7 @@
 ---
 title:  "Etereo"
-date:   2016-08-12
+display-date: Nov 8, 2016
+thumbnail: dreams.png
 categories: [etereo]
 tags: [development]
 ---
