Fixed text preview

--- a/_posts/2016-11-08-etereo.md
+++ b/_posts/2016-11-08-etereo.md
@@ -9,6 +9,7 @@ We are back with some news!
 
 Today we proudly present Etereo, a small adventure-platformer game we have been working on for one month.
 
+<!--end-preview-->
 In Etereo you will help a child in his adventure, exorcizing the corrupted forest dwellers and destroying the darkness dispensers to finally seal the evil again in the depths.
 
 {% include img.html src="images/posts/etereo_small.png" alt="Etereo game capture" %}
